<resources>
    <string name="app_name">TMDB App</string>
    //intro
    <string name="intro_title">Descubra seus</string>
    <string name="intro_subtitle">Filmes favoritos</string>
    <string name="intro_desc">Você pode procurar filmes e programas por gênero, pesquise um título específico ou confira nossa recomendação para você.</string>
    <string name="btn_text_get_started">COMEÇAR</string>

    //edittext
    <string name="edittext_email">E-mail</string>
    <string name="edittext_password">Senha</string>
    <string name="edittext_name">Nome</string>
    <string name="edittext_confirm_password">Confirmar senha</string>


    //signin
    <string name="login_title">Login</string>
    <string name="login_btn_login">Login</string>
    <string name="login_forget_password">Esqueceu a senha?</string>
    <string name="login_dont_account">Não tem uma conta</string>
    <string name="login_register">Cadastre-se agora</string>

    //signup
    <string name="signup_title">Cadastre-se</string>
    <string name="signup_btn_salve">Salvar</string>

    /profile
    <string name="profile_btn_update">Atualizar</string>

    //forgetpassword
    <string name="forget_password_title">Recuperar senha</string>
    <string name="forget_password_btn_send">Enviar</string>
    <string name="forget_password_message_info">Informe seu e-mail que enviaremos as informações de sua nova senha</string>

    //main
    <string name="hint_search">Pesquisar filmes...</string>
    <string name="text_title_1">Filmes populares</string>
    <string name="text_title_2">Categorias</string>
    <string name="text_title_3">Filmes por vir</string>
    <string name="ic_explore">Explorar</string>
    <string name="ic_favorite">Favoritos</string>
    <string name="ic_perfil">Perfil</string>
    <string name="action_settings">Settings</string>

    //movie_details
    <string name="title_movie">Título</string>
    <string name="minutes">Minutos</string>
    <string name="rating">Avaliação</string>
    <string name="description">Descrição</string>
    <string name="description_movie">Descrição do filme</string>
    <string name="cast">Elenco</string>

    //result
    <string name="result_search_title">Resultados para: [Título do filme]</string>

    //favorites
    <string name="favorites_title">Meus favoritos</string>
    <string name="favorites_empty_list">Adicione filmes a sua lista de favoritos!</string>

    //cast_item
    <string name="name_actor">Nome do ator</string>

    //genre_item
    <string name="genre">Gênero</string>

    <string name="title_slider">Título da Imagem</string>
</resources>