<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/explorer"
        android:icon="@drawable/ic_explore_24"
        android:title="@string/ic_explore"
        app:cnb_backgroundColor="@color/orange"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_border_24"
        android:title="@string/ic_favorite"
        app:cnb_backgroundColor="@color/orange"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_perfil_24"
        android:title="@string/ic_perfil"
        app:cnb_backgroundColor="@color/orange"
        app:cnb_iconColor="@color/white" />
</menu>