<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="128dp"
                app:placeholderTextColor="@color/yellow"
                android:textColorHint="@color/white"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:hint="@string/edittext_email"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:hint="Senha"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:text="@string/login_forget_password"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:layout_marginTop="64dp"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/orange_button_background"
                android:text="@string/login_btn_login"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_dont_account"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                 />

            <TextView
                android:id="@+id/textButtonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pbSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>