<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:contentDescription="teste"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.Activities.ForgetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewButtonBackForgetPassword"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_title"
                android:textSize="48sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="86dp"
                android:layout_marginHorizontal="32dp"
                android:text="@string/forget_password_message_info"
                android:textSize="18sp"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmailForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/white"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginEmailForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:hint="@string/edittext_email"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSendForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/orange_button_background"
                android:text="@string/forget_password_btn_send"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>